[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-rack-dashboard"
version = "0.1.0"
description = "RPi Rack Dashboard - System monitoring display for Raspberry Pi"
requires-python = ">=3.8"
dependencies = [
    "ha-mqtt-discoverable",
    "paho-mqtt",
    "python-dotenv",
    "opencv-python",
    "numpy",
    "psutil",
]

[project.optional-dependencies]
rpi = [
    "luma.lcd",
    "adafruit-blinka",
    "spidev",
    "gpiozero",
    "Pillow",
    "RPi.GPIO",
]

[tool.setuptools]
py-modules = []
